--- a/aragog-common/pom.xml
+++ b/aragog-common/pom.xml
@@ -62,4 +62,9 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+
+        </plugins>
+    </build>
 </project>
